<resources>
    <string name="whatsnew_title">微信 4.5</string>
    <string name="whatsnew_play">听首老歌，轻松下</string>
    <string name="whatsnew_enter">直接进入微信</string>
    <string name="whatsnew_enter4.5">进入微信 4.5</string>
    <string name="chatroom_sys_msg_invite_split">、</string>
    <string name="app_name">WeChat</string>
    <string name="launcher_name">WeChat</string>
    <string name="app_tip">提示</string>
    <string name="app_send">发送</string>
    <string name="app_sending">正在发送...</string>
    <string name="app_set">设置</string>
    <string name="app_back">返回</string>
    <string name="app_cancel">取消</string>
    <string name="app_cancel_20">"取  消"</string>
    <string name="app_ok">确定</string>
    <string name="app_save">保存</string>
    <string name="app_delete">删除</string>
    <string name="app_clear">清空</string>
    <string name="app_continue">继续</string>
    <string name="app_nextstep">下一步</string>
    <string name="app_prevstep">上一步</string>
    <string name="app_finish">完成</string>
    <string name="app_find">查找</string>
    <string name="app_edit">编辑</string>
    <string name="app_search">搜索</string>
    <string name="app_yes">是</string>
    <string name="app_no">否</string>
    <string name="app_down_show_nexttime">下次不提示</string>
    <string name="app_pic">[图片]</string>
    <string name="app_music">[音乐]</string>
    <string name="app_voice">[语音]</string>
    <string name="app_video">[视频]</string>
    <string name="app_app">[应用消息]</string>
    <string name="app_url">[链接]</string>
    <string name="app_file">[文件]</string>
    <string name="app_voip">[视频聊天]</string>
    <string name="app_emoji">[动画表情]</string>
    <string name="app_waiting">请稍候...</string>
    <string name="app_loading_data">正在载入数据...</string>
    <string name="app_empty_string" />
    <string name="app_new">new</string>
    <string name="app_download">下载</string>
    <string name="app_install">安装</string>
    <string name="app_canceling">取消中</string>
    <string name="app_downloading">下载中...</string>
    <string name="app_searching">查找中...</string>
    <string name="app_download_finish">下载完成</string>
    <string name="app_download_update_package">微信更新包下载</string>
    <string name="app_update_package_notify">微信更新包提醒</string>
    <string name="app_recommend_update">有新版本的微信，推荐更新</string>
    <string name="app_default">系统默认</string>
    <string name="app_zh_CN">简体中文</string>
    <string name="app_zh_TW">繁體中文</string>
    <string name="app_en">English</string>
    <string name="app_th">ภาษาไทย</string>
    <string name="app_id">Bahasa Indonesia</string>
    <string name="app_vi">Tiếng Việt</string>
    <string name="app_pt">Português</string>
    <string name="app_es">Español</string>
    <string name="app_ru">Русский</string>
    <string name="app_ar">العربية</string>
    <string name="app_he">‏עברית</string>
    <string name="app_pl">Polski</string>
    <string name="app_hi">हिन्दी</string>
    <string name="app_ja">日本語</string>
    <string name="app_it">Italiano</string>
    <string name="app_ko">한국어</string>
    <string name="app_ms">Bahasa Melayu</string>
    <string name="app_lang_sys">跟随系统</string>
    <string name="app_ignore_it">跳过</string>
    <string name="app_field_qquin">QQ号:</string>
    <string name="app_field_username">微信号:</string>
    <string name="app_field_weibo">微博号:</string>
    <string name="app_field_mobile">手机号:</string>
    <string name="app_field_voice">对讲</string>
    <string name="app_field_text">文字</string>
    <string name="app_field_smiley">表情</string>
    <string name="app_field_pic">图片</string>
    <string name="app_field_video">视频</string>
    <string name="app_field_card">名片</string>
    <string name="app_field_voip">视频聊天</string>
    <string name="app_field_location">位置</string>
    <string name="app_share">分享</string>
    <string name="app_shared">已分享</string>
    <string name="app_share_to_weixin">发送给朋友</string>
    <string name="app_account">微信号：%s</string>
    <string name="scroll_bar_search">搜</string>
    <string name="media_ejected">储存卡已拔出，微信头像、图片、语音、视频、相册及朋友圈功能将暂时不可用</string>
    <string name="media_ejected_readonly">储存卡处于只读模式，微信头像、图片、语音、视频、相册及朋友圈功能将暂时不可用，请尝试重启手机恢复</string>
    <string name="media_full">储存卡剩余空间不足，可能影响到微信图片、语音及视频等功能</string>
    <string name="landspace_sys_tips">微信已开启横屏模式，但还打开系统的“自动旋转屏幕”设置</string>
    <string name="landspace_weixin_tips">是否需要开启微信横屏模式</string>
    <string name="applet_secimg_title">填写验证码</string>
    <string name="applet_secimg_change">换一张图片</string>
    <string name="settings_sex">性别</string>
    <string name="settings_district">地区</string>
    <string name="settings_signature">个性签名</string>
    <string name="settings_signature_empty">未填写</string>
    <string name="sex_male">男</string>
    <string name="sex_female">女</string>
    <string name="say_hi_count_text">你收到%d个打招呼消息</string>
    <string name="show_say_hi_lbs_btn">查看附近的人</string>
    <string name="say_hi_list_lbs_title">附近打招呼的人</string>
    <string name="say_hi_list_more">查看更多</string>
    <string name="say_hi_clean_all_btn">清空</string>
    <string name="say_hi_clean_all_title">确定清空历史列表？</string>
    <string name="say_hi_non">暂时没有向你打招呼的人</string>
    <string name="say_hi_list_shake_title">打招呼的人</string>
    <string name="chatting_from_verify_lbs_tip">对方向你打了声招呼</string>
    <string name="fmt_qqsynchelper_brief_alert">你已经%d天没有备份了</string>
    <string name="fmt_qqsynchelper_brief_new">备份通讯录，保障你的通讯录安全</string>
    <string name="contact_info_qqsync_switch_tip">我能帮你安全备份手机通讯录到云端，你可以随时恢复手机联系人到手机中。</string>
    <string name="contact_info_go_to_sync">进入安全助手</string>
    <string name="contact_info_remind_me_syncing">定时提醒备份</string>
    <string name="contact_info_remind_me_syncing_tip">每14天提醒你备份通讯录</string>
    <string name="contact_info_qqsync_intro">使用说明</string>
    <string name="contact_info_qqsync_agreement">服务协议</string>
    <string name="settings_plugins">功能</string>
    <string name="settings_plugins_install">启用该功能</string>
    <string name="settings_plugins_uninstall">停用</string>
    <string name="contact_info_clear_data">清空此功能消息记录</string>
    <string name="settings_account_info">我的帐号</string>
    <string name="settings_personal_info">个人信息</string>
    <string name="settings_qrcode_card">二维码名片</string>
    <string name="settings_my_album">我的相册</string>
    <string name="settings_faq">帮助与反馈</string>
    <string name="settings_skin">界面主题</string>
    <string name="settings_chatting_bg">聊天背景</string>
    <string name="settings_bind_mobile_title">手机通讯录匹配</string>
    <string name="settings_invite_mobile_friends">邀请手机朋友</string>
    <string name="settings_about_privacy">隐私</string>
    <string name="settings_need_verify">加我为朋友时需要验证</string>
    <string name="settings_find_me_by_QQ">通过QQ号搜索到我</string>
    <string name="settings_find_me_by_weixin">通过微信号搜索到我</string>
    <string name="settings_find_me_tip">关闭后，其他用户不能通过微信号找到你</string>
    <string name="settings_auto_add_reply_friends">回复陌生人自动添加为朋友</string>
    <string name="settings_auto_add_reply_friends_tip">关闭后，回复陌生人不会自动添加为朋友</string>
    <string name="settings_find_me_by_mobile">通过手机号搜索到我</string>
    <string name="settings_qq_recommend_tip">关闭后，其他用户不能通过QQ号搜索到你</string>
    <string name="settings_mobile_recommend_tip">关闭后，其他用户不能通过手机号搜索到你</string>
    <string name="settings_about_system">通用</string>
    <string name="settings_system_notice">系统通知</string>
    <string name="settings_about_micromsg">关于微信</string>
    <string name="settings_welcome">欢迎页</string>
    <string name="settings_push_software">腾讯软件精品推荐</string>
    <string name="settings_recommend_by_mb">邀请微博朋友</string>
    <string name="settings_recommend_by_mail">邀请邮箱联系人</string>
    <string name="settings_invite_qq_friends">邀请QQ好友</string>
    <string name="settings_invite_facebook_friends">邀请Facebook朋友</string>
    <string name="settings_avatar">头像</string>
    <string name="settings_username">微信号</string>
    <string name="settings_name">名字</string>
    <string name="settings_tweibo">腾讯微博</string>
    <string name="settings_room_right">群聊权限</string>
    <string name="settings_logout">退出登录</string>
    <string name="settings_reset">清空聊天记录</string>
    <string name="settings_notification">新消息提醒</string>
    <string name="settings_language">多语言</string>
    <string name="settings_text_size">字体大小</string>
    <string name="settings_landscape_mode">开启横屏模式</string>
    <string name="settings_voicerecorder_mode">使用高速录音模式</string>
    <string name="settings_voice_play_mode">使用听筒播放语音</string>
    <string name="settings_traffic_statistic">流量统计</string>
    <string name="settings_update">功能介绍</string>
    <string name="funtion_update">新版更新</string>
    <string name="funtion_check_update">检查新版本</string>
    <string name="settings_market_ratings">去评分</string>
    <string name="settings_follow_twitter">在Twitter上关注我们</string>
    <string name="settings_like_facebook">在Facebook上赞我们</string>
    <string name="settings_bakchat_ui">聊天记录迁移</string>
    <string name="contact_info_view_message">查看消息</string>
    <string name="contact_info_weibo">腾讯微博</string>
    <string name="contact_info_verify_user_title">微信认证</string>
    <string name="contact_info_isnot_verify_user_title">功能介绍</string>
    <string name="contact_info_recommend_qqfriends_to_me">向我推荐QQ好友</string>
    <string name="contact_info_recommend_mobilefriends_to_me">向我推荐通讯录朋友</string>
    <string name="contact_info_qmessage_recv_offline_msg">接收离线消息</string>
    <string name="contact_info_qmessage_display_weixin_online">在QQ上显示微信在线</string>
    <string name="contact_info_qmessage_send_qq_message">发QQ消息</string>
    <string name="contact_info_subscribe_bizinfo">接收消息</string>
    <string name="contact_info_show_brand">在我的名片里显示</string>
    <string name="contact_info_locate">提供位置信息</string>
    <string name="contact_info_biz_add">关注</string>
    <string name="contact_info_biz_view">查看消息</string>
    <string name="contact_info_biz_remove">取消关注</string>
    <string name="contact_info_favor_brand">关注</string>
    <string name="contact_info_time_expired">该用户已过期或注销，无法加入关注。</string>
    <string name="contact_search_title">搜号码</string>
    <string name="find_friends_by_qrcode">扫一扫</string>
    <string name="find_friends_by_qq">从QQ好友列表添加</string>
    <string name="find_friends_by_mobile">从手机通讯录列表添加</string>
    <string name="explore_all_verified_users">查找微信公众帐号</string>
    <string name="room_my_displayname">我的群昵称</string>
    <string name="room_save_to_contact">保存到通讯录</string>
    <string name="room_msg_close_notify">关闭声音震动提醒</string>
    <string name="room_msg_show_username">聊天中显示群昵称</string>
    <string name="room_placed_to_the_top">聊天置顶</string>
    <string name="room_set_chatting_background">设置当前聊天背景</string>
    <string name="room_clear_chatting_history">清空聊天记录</string>
    <string name="shake_item_change_bgimg">换张背景图片</string>
    <string name="shake_item_default_bgimg">使用默认的背景图片</string>
    <string name="shake_item_sound">音效</string>
    <string name="shake_item_shake_person_list">摇到的人</string>
    <string name="shake_item_shake_webpage_list">摇到的网页</string>
    <string name="shake_item_shake_music_list">摇到的歌</string>
    <string name="shake_item_shake_tran_img">摇一摇传图功能</string>
    <string name="shake_item_shake_bookmark">摇一摇传图书签</string>
    <string name="find_friends_by_facebook">添加Facebook朋友</string>
    <string name="contact_info_meishiapp_viewmsg">查看美食优惠消息</string>
    <string name="contact_info_meishiapp_push">接收会员卡优惠提醒</string>
    <string name="contact_info_meishiapp_viewcard">查看美食优惠卡包</string>
    <string name="v_contact_weixin_id">微信ID</string>
    <string name="v_contact_organization">组织</string>
    <string name="v_contact_agent">代理人</string>
    <string name="v_contact_home_page">个人主页</string>
    <string name="v_contact_email">电子邮箱</string>
    <string name="v_contact_birthday">生日</string>
    <string name="v_contact_remark">备注</string>
    <string name="v_contact_logo">标志</string>
    <string name="v_contact_photo_uri">照片</string>
    <string name="v_contact_add_contact">保存</string>
</resources>