<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/com.tencent.mm"
  xmlns:android1="http://schemas.android.com/apk/res/android">
    <com.tencent.mm.ui.contact.VcardContactUserHeaderPreference android:layout="@layout/vcontact_info_header" android:key="v_contact_info_header" />
    <com.tencent.mm.ui.contact.VcardContactLinkPreference android:layout="@layout/mm_preference" android:title="@string/v_contact_photo_uri" android:key="v_contact_info_photo_uri" />
    <PreferenceCategory android:key="v_category_photo_uri" />
    <com.tencent.mm.ui.contact.VcardContactLinkPreference android:layout="@layout/mm_preference" android:title="@string/v_contact_email" android:key="v_contact_info_email" />
    <com.tencent.mm.ui.base.preference.KeyValuePreference android:layout="@layout/mm_preference" android:title="@string/v_contact_organization" android:key="v_contact_info_org" />
    <com.tencent.mm.ui.base.preference.KeyValuePreference android:layout="@layout/mm_preference" android:title="@string/v_contact_agent" android:key="v_contact_info_agent" />
    <com.tencent.mm.ui.contact.VcardContactLinkPreference android:layout="@layout/mm_preference" android:title="@string/v_contact_weixin_id" android:key="c_contact_info_wx_id" />
    <PreferenceCategory android:key="v_category_main" />
    <com.tencent.mm.ui.contact.VcardContactLinkPreference android:layout="@layout/mm_preference" android:title="@string/v_contact_home_page" android:key="v_contact_info_home_page" />
    <PreferenceCategory android:key="v_category_home_page" />
    <com.tencent.mm.ui.base.preference.KeyValuePreference android:layout="@layout/mm_preference" android:title="@string/v_contact_birthday" android:key="v_contact_info_birthday" />
    <PreferenceCategory android:key="v_category_birthday" />
    <com.tencent.mm.ui.base.preference.KeyValuePreference android:layout="@layout/mm_preference" android:title="@string/v_contact_remark" android:key="v_contact_info_remark" />
    <PreferenceCategory android:key="v_category_remark" />
    <com.tencent.mm.ui.contact.VcardContactLinkPreference android:layout="@layout/mm_preference" android:title="@string/v_contact_logo" android:key="v_contact_info_logo" />
    <PreferenceCategory android:key="v_category_logo" />
    <Preference android:layout="@layout/add_vcard_contact" android:title="@string/v_contact_add_contact" android:key="add_vcard_contact" />
    <PreferenceCategory />
</PreferenceScreen>