<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/com.tencent.mm">
    <com.tencent.mm.ui.contact.HelperHeaderPreference android:layout="@layout/contact_info_header_helper" android:key="contact_info_header_helper" />
    <Preference android:layout="@layout/install_btn" android:title="@string/settings_plugins_install" android:key="contact_info_qmessage_install" android:widgetLayout="@layout/mm_preference_screen" />
    <Preference android:layout="@layout/mm_preference" android:title="@string/contact_info_view_message" android:key="contact_info_view_message" android:widgetLayout="@layout/mm_preference_screen" />
    <Preference android:layout="@layout/mm_preference" android:title="@string/contact_info_qmessage_send_qq_message" android:key="contact_info_qmessage_send_qq_message" android:widgetLayout="@layout/mm_preference_screen" />
    <PreferenceCategory />
    <CheckBoxPreference android:layout="@layout/mm_preference" android:persistent="false" android:title="@string/contact_info_qmessage_recv_offline_msg" android:key="contact_info_qmessage_recv_offline_msg" />
    <CheckBoxPreference android:layout="@layout/mm_preference" android:persistent="false" android:title="@string/contact_info_qmessage_display_weixin_online" android:key="contact_info_qmessage_display_weixin_online" />
    <PreferenceCategory />
    <Preference android:layout="@layout/mm_preference" android:title="@string/contact_info_clear_data" android:key="contact_info_qmessage_clear_data" />
    <PreferenceCategory />
    <Preference android:layout="@layout/logout_btn" android:title="@string/settings_plugins_uninstall" android:key="contact_info_qmessage_uninstall" android:widgetLayout="@layout/mm_preference_screen" />
</PreferenceScreen>